--- a/deployment/backend-rc.yaml
+++ b/deployment/backend-rc.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: api-frontend
-          image: gcr.io/shopify-challenge-216421/api:latest
+          image: gcr.io/${PROJECT_ID}/api:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -58,7 +58,7 @@ spec:
         - name: cloudsql-proxy
           image: gcr.io/cloudsql-docker/gce-proxy:1.11
           command: ["/cloud_sql_proxy", "--dir=/cloudsql",
-                    "-instances=shopify-challenge-216421:us-central1:shopify-challenge-216421=tcp:5432",
+                    "-instances=${PROJECT_ID}:us-central1:${CLOUD_INSTANCE}-216421=tcp:5432",
                     "-credential_file=/secrets/cloudsql/credentials.json"]
           # [END cloudsql_security_context]
           volumeMounts:
